--- a/src/main/resources/templates/edit_place.html
+++ b/src/main/resources/templates/edit_place.html
@@ -2,39 +2,41 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Система работы со студентами | Редактирование студента</title>
+    <title>Редактирование данных</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 <div class="bg-image"
      style="background-image: url('https://palchevsky.ru/images/background.jpg'); height: 100vh; overflow: auto">
-    <blockquote class="blockquote text-center"><h1>Редактирование студента факультета ИТиАБД</h1></blockquote>
+    <blockquote class="blockquote text-center"><h1>Редактирование спектаклей</h1></blockquote>
     <div class="row">
         <div class="col-md-8 offset-md-4">
-            <form action="#" th:action="@{/save}" th:object="${student}" method="post">
+            <form action="#" th:action="@{/save}" th:object="${play}" method="post">
                 <table>
                     <tr>
-                        <td>ID студента:</td>
+                        <td>ID:</td>
                         <td><input type="text" th:field="*{id}" readonly="readonly"></td>
                     </tr>
                     <tr>
-                        <td>Имя:</td>
-                        <td><input type="text" th:field="*{first}"></td>
+                        <td>Название:</td>
+                        <td><input type="text" th:field="*{name}"></td>
                     </tr>
                     <tr>
-                        <td>Фамилия:</td>
-                        <td><input type="text" th:field="*{last}"></td>
+                        <td>Название коллектива:</td>
+                        <td><input type="text" th:field="*{troupe}"></td>
                     </tr>
                     <tr>
-                        <td>Номер студенческого:</td>
-                        <td><input type="text" th:field="*{num}"></td>
+                        <td>Дата:</td>
+                        <td><input type="text" th:field="*{date}"></td>
                     </tr>
                     <tr>
-                        <td>Средний балл:</td>
-                        <td><input type="text" onkeyup="this.value = this.value.replace(/\.(?=.*\.)|[^\d\.-]/g, '');"
-                                   onchange="this.value = this.value.replace(/\.(?=.*\.)|[^\d\.-]/g, '');"
-                                   th:field="*{av}"></td>
+                        <td>Все билеты:</td>
+                        <td><input type="text" th:field="*{total_tickets}"></td>
+                    </tr>
+                    <tr>
+                        <td>Доступные билеты:</td>
+                        <td><input type="text" th:field="*{free_tickets}"></td>
                     </tr>
                     <tr>
                         <td colspan="2">
