--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,3 @@
-<!--import hui from "../../com/example/kp/AppController.java";-->
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
@@ -21,6 +19,12 @@
                 <input type="button" class="btn btn-warning btn-sm" value="Очистить" id="btnClear"
                        onclick="clearSearch()"/>
             </form>
+            <h4>Фильтр по дате:</h4>
+            <form th:action="@{/filterByDate}" method="get">
+                <label for="date">Выберите дату спектакля:</label>
+                <input type="date" id="date" name="date"/>
+                <input type="submit" class="btn btn-primary" value="Фильтр"/>
+            </form>
         </div>
     </div>
     <table id="1" class="table table-striped table-hover">
@@ -29,7 +33,7 @@
             <th scope="col">ID </th>
             <th scope="col">Имя</th>
             <th scope="col">труп</th>
-            <th scope="col">дфнф</th>
+            <th scope="col">дата</th>
             <th scope="col">все билеты</th>
             <th scope="col">купи меня </th>
         </tr>
@@ -64,7 +68,7 @@
     <blockquote class="blockquote text-center">
         <a href="/new">
             <button type="button" class="btn btn-primary" data-togge="button" aria-pressed="false" autocomplete="off">
-                Добавить хуй
+                Добавить
             </button>
         </a>
     </blockquote>
@@ -74,5 +78,35 @@
         window.location = "[[@{/}]]";
     }
 </script>
+<canvas id="playsChart" width="400" height="200"></canvas>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+    var ctx = document.getElementById('playsChart').getContext('2d');
+    var labels = /*[[${playCountData*.get(0)}]]*/[];
+    var data = /*[[${playCountData*.get(1)}]]*/[];
+
+    var playsChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: labels,
+            datasets: [{
+                label: 'Количество спектаклей по дням',
+                data: data,
+                backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                borderColor: 'rgba(75, 192, 192, 1)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
+            }
+        }
+    });
+</script>
+
 </body>
 </html>
