--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,35 +78,34 @@
         window.location = "[[@{/}]]";
     }
 </script>
-<canvas id="playsChart" width="400" height="200"></canvas>
+<!--<canvas id="playsChart" width="400" height="200"></canvas>-->
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-    var ctx = document.getElementById('playsChart').getContext('2d');
-    var labels = /*[[${playCountData*.get(0)}]]*/[];
-    var data = /*[[${playCountData*.get(1)}]]*/[];
+<!--<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
+<!--<script>-->
+<!--    var ctx = document.getElementById('playsChart').getContext('2d');-->
+<!--    var labels = /*[[${playCountData*.get(0)}]]*/[];-->
+<!--    var data = /*[[${playCountData*.get(1)}]]*/[];-->
 
-    var playsChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: labels,
-            datasets: [{
-                label: 'Количество спектаклей по дням',
-                data: data,
-                backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                borderColor: 'rgba(75, 192, 192, 1)',
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
-        }
-    });
-</script>
-
+<!--    var playsChart = new Chart(ctx, {-->
+<!--        type: 'bar',-->
+<!--        data: {-->
+<!--            labels: labels,-->
+<!--            datasets: [{-->
+<!--                label: 'Количество спектаклей по дням',-->
+<!--                data: data,-->
+<!--                backgroundColor: 'rgba(75, 192, 192, 0.2)',-->
+<!--                borderColor: 'rgba(75, 192, 192, 1)',-->
+<!--                borderWidth: 1-->
+<!--            }]-->
+<!--        },-->
+<!--        options: {-->
+<!--            scales: {-->
+<!--                y: {-->
+<!--                    beginAtZero: true-->
+<!--                }-->
+<!--            }-->
+<!--        }-->
+<!--    });-->
+<!--</script>-->
 </body>
 </html>
