--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
             </form>
             <h4>Фильтр по дате:</h4>
             <form th:action="@{/filterByDate}">
-                <input type="text" id="date" name="date"/>
+                <input type="date" id="date" name="date" required/>
                 <input type="submit" class="btn btn-success btn-sm" value="Выбрать"/>
             </form>
         </div>
