--- a/src/main/resources/templates/edit_place.html
+++ b/src/main/resources/templates/edit_place.html
@@ -16,27 +16,27 @@
                 <table>
                     <tr>
                         <td>ID:</td>
-                        <td><input type="text" th:field="*{id}" readonly="readonly"></td>
+                         <td><input type="text" th:field="*{id}" readonly="readonly"></td>  <!-- ?????????????????????????????????????????????????  -->
                     </tr>
                     <tr>
                         <td>Название:</td>
-                        <td><input type="text" th:field="*{name}"></td>
+                        <td><input placeholder="Название" type="text" th:field="*{name}"></td>
                     </tr>
                     <tr>
                         <td>Название коллектива:</td>
-                        <td><input type="text" th:field="*{troupe}"></td>
+                        <td><input placeholder="Название коллектива" type="text" th:field="*{troupe}"></td>
                     </tr>
                     <tr>
                         <td>Дата:</td>
-                        <td><input type="text" th:field="*{date}"></td>
+                        <td><input placeholder="Дата" type="text" th:field="*{date}"></td>
                     </tr>
                     <tr>
-                        <td>Все билеты:</td>
-                        <td><input type="text" th:field="*{total_tickets}"></td>
+                        <td>Всего билетов:</td>
+                        <td><input placeholder="Всего билетов" type="text" th:field="*{total_tickets}"></td>
                     </tr>
                     <tr>
                         <td>Доступные билеты:</td>
-                        <td><input type="text" th:field="*{free_tickets}"></td>
+                        <td><input placeholder="Доступные билеты" type="text" th:field="*{free_tickets}"></td>
                     </tr>
                     <tr>
                         <td colspan="2">
