--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="bg-image"
      style="background-image: url('https://palchevsky.ru/images/background.jpg'); height: 100vh; overflow: auto">
-    <blockquote class="blockquote text-center"><h1>хуй факультета ИТиАБД</h1></blockquote>
+    <blockquote class="blockquote text-center"><h1>Система покупки билетов в театр</h1></blockquote>
     <div class="row">
         <div class="col-md-8 offset-md-4">
             <!-- <h4>Поиск плейс по любому критерию:</h4> -->
