sql file is fixed2

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,10 +58,10 @@
           <tr>
             <th scope="col">ID</th>
             <th scope="col">Имя</th>
-            <th scope="col">труп</th>
-            <th scope="col">дата</th>
-            <th scope="col">все билеты</th>
-            <th scope="col">свободные билеты</th>
+            <th scope="col">Труппа</th>
+            <th scope="col">Дата</th>
+            <th scope="col">Все билеты</th>
+            <th scope="col">Свободные билеты</th>
           </tr>
         </thead>
         <tbody>
@@ -73,10 +73,10 @@
               Название спектакля отсутствует
             </th>
             <th scope="row" class="text-white" th:text="${theatre.troupe}">
-              труппа отсутствует
+              Труппа отсутствует
             </th>
             <th scope="row" class="text-white" th:text="${theatre.date}">
-              дата отсутствует
+              Дата отсутствует
             </th>
             <th
               scope="row"
