--- a/src/main/resources/templates/edit_place.html
+++ b/src/main/resources/templates/edit_place.html
@@ -8,8 +8,8 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
-<div class="bg-image"
-     style="background-image: url('https://palchevsky.ru/images/background.jpg'); height: 100vh; overflow: auto">
+<div class="bg-image">
+<!--     style="background-image: url('https://palchevsky.ru/images/background.jpg'); height: 100vh; overflow: auto">-->
     <blockquote class="blockquote text-center"><h1>Редактирование спектаклей</h1></blockquote>
     <div class="row">
         <div class="col-md-8 offset-md-4">
