--- a/src/main/resources/templates/new_place.html
+++ b/src/main/resources/templates/new_place.html
@@ -8,8 +8,8 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
-<div class="bg-image"
-     style="background-image: url('https://palchevsky.ru/images/background.jpg'); height: 100vh; overflow: auto">
+<div class="bg-image">
+<!--     style="background-image: url('https://palchevsky.ru/images/background.jpg'); height: 100vh; overflow: auto">-->
     <blockquote class="blockquote text-center"><h1>Добавить спектакль</h1></blockquote>
     <div class="row">
         <div class="col-md-8 offset-md-4">
@@ -32,7 +32,7 @@
                         <td><input placeholder="Дата" type="text" th:field="*{date}"></td>
                     </tr>
                     <tr>
-                        <td>Всего билеты:</td>
+                        <td>Всего билетов:</td>
                         <td><input placeholder="Всего билетов" type="text" th:field="*{total_tickets}"></td>
                     </tr>
                     <tr>
