--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
           <form th:action="@{/}">
             <input
               class="input_field"
-              placeholder="Поиск по спектаклю"
+              placeholder="Поиск спектакля"
               type="text"
               name="keyword"
               id="keyword"
