--- a/src/main/resources/templates/edit_place.html
+++ b/src/main/resources/templates/edit_place.html
@@ -17,7 +17,7 @@
                 <table>
                     <tr>
                         <td>ID:</td>
-                         <td><input type="text" th:field="*{id}" readonly="readonly"></td>  <!-- ?????????????????????????????????????????????????  -->
+                         <td><input placeholder="ID" type="text" th:field="*{id}" readonly="readonly"></td>  <!-- ?????????????????????????????????????????????????  -->
                     </tr>
                     <tr>
                         <td>Название:</td>
