--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <title>Система покупки билетов в театр</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <style>
+        body {
+            display: flex;
+            /* justify-content: center; */
+            flex-direction: column;
+            background-color: rgb(255, 223, 196);
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .search_filters {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 20px;
+        }
+
+        .additional_filters {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 20px;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .filter_name {
+            padding: 0;
+            margin: 0;
+        }
+
+        .btn {
+            padding: 5px 5px 5px 5px;
+            border-radius: 10px;
+            border: none;
+            background-color: black;
+            color: white;
+        }
+
+        .input_field {
+            padding: 5px;
+            border: none;
+            border-radius: 5px;
+        }
+    </style>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
   </head>
