--- a/src/main/resources/templates/new_place.html
+++ b/src/main/resources/templates/new_place.html
@@ -1,53 +1,111 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Добавить спектакль</title>
-    <link rel="stylesheet" href="./styles.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-</head>
-<body>
-<div class="bg-image">
-<!--     style="background-image: url('https://palchevsky.ru/images/background.jpg'); height: 100vh; overflow: auto">-->
-    <blockquote class="blockquote text-center"><h1>Добавить спектакль</h1></blockquote>
-    <div class="row">
+    <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(255, 223, 196);
+        align-items: center;
+      }
+      .btn {
+        padding: 5px 5px 5px 5px;
+        border-radius: 10px;
+        border: none;
+        background-color: black;
+        color: white;
+        margin: 5px 0;
+      }
+
+      .btn:hover {
+        background-color: #55d582;
+        color: black;
+        transition-duration: 0.3s;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="bg-image">
+      <blockquote class="blockquote text-center">
+        <h1>Добавить спектакль</h1>
+      </blockquote>
+      <div class="row">
         <div class="col-md-8 offset-md-4">
-            <form action="#" th:action="@{/save}" th:object="${play}" method="post">
-                <table>
-                    <tr>
-                        <td>ID добавляется автоматически</td>
-<!--                        <td><input type="text" th:field="*{id}" readonly="readonly"></td>-->
-                    </tr>
-                    <tr>
-                        <td>Название:</td>
-                        <td><input placeholder="Название" type="text" th:field="*{name}"></td>
-                    </tr>
-                    <tr>
-                        <td>Название коллектива:</td>
-                        <td><input placeholder="Название коллектива" type="text" th:field="*{troupe}"></td>
-                    </tr>
-                    <tr>
-                        <td>Дата:</td>
-                        <td><input placeholder="Дата" type="text" th:field="*{date}"></td>
-                    </tr>
-                    <tr>
-                        <td>Всего билетов:</td>
-                        <td><input placeholder="Всего билетов" type="text" th:field="*{total_tickets}"></td>
-                    </tr>
-                    <tr>
-                        <td>Доступные билеты:</td>
-                        <td><input placeholder="Доступные билеты" type="text" th:field="*{free_tickets}"></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Сохранить</button>
-                        </td>
-                    </tr>
-                </table>
-        </form>
+          <form
+            action="#"
+            th:action="@{/save}"
+            th:object="${play}"
+            method="post"
+          >
+            <table>
+              <tr>
+                <td>* ID добавляется автоматически</td>
+              </tr>
+              <tr>
+                <td>Название:</td>
+                <td>
+                  <input
+                    placeholder="Название"
+                    type="text"
+                    th:field="*{name}"
+                  />
+                </td>
+              </tr>
+              <tr>
+                <td>Название коллектива:</td>
+                <td>
+                  <input
+                    placeholder="Название коллектива"
+                    type="text"
+                    th:field="*{troupe}"
+                  />
+                </td>
+              </tr>
+              <tr>
+                <td>Дата:</td>
+                <td>
+                  <input placeholder="Дата" type="text" th:field="*{date}" />
+                </td>
+              </tr>
+              <tr>
+                <td>Всего билетов:</td>
+                <td>
+                  <input
+                    placeholder="Всего билетов"
+                    type="text"
+                    th:field="*{total_tickets}"
+                  />
+                </td>
+              </tr>
+              <tr>
+                <td>Доступные билеты:</td>
+                <td>
+                  <input
+                    placeholder="Доступные билеты"
+                    type="text"
+                    th:field="*{free_tickets}"
+                  />
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <button
+                    type="submit"
+                    class="btn btn-primary"
+                    data-toggle="button"
+                    aria-pressed="false"
+                    autocomplete="off"
+                  >
+                    Сохранить
+                  </button>
+                </td>
+              </tr>
+            </table>
+          </form>
+        </div>
+      </div>
     </div>
-    </div>
-</div>
-</body>
+  </body>
 </html>
