--- a/src/main/resources/templates/edit_place.html
+++ b/src/main/resources/templates/edit_place.html
@@ -28,11 +28,11 @@
   </head>
   <body>
     <div>
-      <blockquote class="blockquote text-center">
+      <blockquote class="title">
         <h1>Редактирование спектаклей</h1>
       </blockquote>
-      <div class="row">
-        <div class="col-md-8 offset-md-4">
+      <div class="rows">
+        <div class="content">
           <form
             action="#"
             th:action="@{/save}"
